# backend/src/main/java/com/bamdow/pojo/dto/ProjectUpdateDTO.java
@@ -2,12 +2,15 @@ package com.bamdow.pojo.dto;
 
 import lombok.Data;
 
+import java.util.List;
+
 @Data
 public class ProjectUpdateDTO {
+    private String id;
     private String title;
     private String description;
     private String image;
-    private String tags;
+    private List<String> tags;
 
     // 摄影项目特有字段
     private String thoughts;
@@ -15,7 +18,9 @@ public class ProjectUpdateDTO {
 
     // 开发项目特有字段
     private String githubUrl;
-
+    private String readme;
+    
     // 其他项目特有字段
     private String externalLink;
+    private String introduction;
 }
