# backend/src/main/java/com/bamdow/pojo/entity/OtherProject.java
@@ -6,4 +6,5 @@ import lombok.Data;
 public class OtherProject {
     private String id;
     private String externalLink;
+    private String introduction;
 }
